--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-tables-2",
+  "name": "@dcorrea-estrav/vue-tables-2",
   "description": "Vue.js 2 grid components",
   "version": "2.1.74",
   "keywords": [
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/matfish2/vue-tables-2"
+    "url": "https://github.com/dcorrea-estrav/vue-tables-2"
   },
   "files": [
     "compiled",
